commit 3 - inclusao de familiar, update, e delete

--- a/templates/infoPaciente.html
+++ b/templates/infoPaciente.html
@@ -80,4 +80,13 @@
   </form>
 
 </div>
-    {% endblock %} </div>
+       <div class="well text-center">
+
+ <h1> PIA's relacionados ao paciente {{pacientes.nome}}</h1>
+
+    </div>
+
+   <td></td>
+
+
+{% endblock %} </div>
