--- a/templates/header.html
+++ b/templates/header.html
@@ -24,6 +24,10 @@
           <li class="nav-item">
             <a class="nav-link" style="color:white" href="/listPia">Lista PIA</a>
           </li>
+
+            <li class="nav-item">
+            <a class="nav-link" style="color:white" href="/listFamiliares">Lista Familiares</a>
+          </li>
         </ul>
       </div>
     </div>
