commit 4 - atualização nomemclaturas de Paciente para "Atendido"

--- a/templates/atualizarPaciente.html
+++ b/templates/atualizarPaciente.html
@@ -15,7 +15,7 @@
         <div class="well text-center">
     <div class="well text-center">
 
- <h1> Atualização Paciente: {{pacientes.nome}}</h1>
+ <h1> Atualização Atendido: {{pacientes.nome}}</h1>
 
     </div>
 
