--- a/templates/createPIA.html
+++ b/templates/createPIA.html
@@ -21,7 +21,7 @@
 <form action='' method = "POST">
 <table class="table">
     <tr>
-        <td>ID PACIENTE</td>
+        <td>ID Atendido</td>
         <td><input type="text" name="id_paciente" id="id_paciente" placeholder="" class="form-control"></td>
     </tr>
     <tr>
