--- a/templates/deletePaciente.html
+++ b/templates/deletePaciente.html
@@ -10,7 +10,7 @@
 <div class="container">
 <form action='' method="post">
     <br>
-    <p>Seguir com a exclusão do Paciente: </p>
+    <p>Seguir com a exclusão do Atendido? </p>
      <br>
 
     <input type = "submit" value="YES" class="btn btn-danger">
