--- a/templates/infoPaciente.html
+++ b/templates/infoPaciente.html
@@ -16,7 +16,7 @@
         <div class="well text-center">
     <div class="well text-center">
 
- <h1> Informações do Paciente: {{pacientes.nome}}</h1>
+ <h1> Informações do Atendido: {{pacientes.nome}}</h1>
 
     </div>
 
@@ -82,7 +82,7 @@
 </div>
        <div class="well text-center">
 
- <h1> PIA's relacionados ao paciente {{pacientes.nome}}</h1>
+ <h1> PIA's relacionados ao atendido: {{pacientes.nome}}</h1>
 
     </div>
 
