--- a/templates/infoPia.html
+++ b/templates/infoPia.html
@@ -21,7 +21,7 @@
 <form action='' method = "POST">
 <table class="table">
     <tr>
-        <td>Id Paciente:</td>
+        <td>Id Atendido:</td>
         <td><p>{{pias.id_paciente}}<p/>
 </td>
     </tr>
