--- a/templates/listPIA.html
+++ b/templates/listPIA.html
@@ -27,7 +27,7 @@
  <table class="table">
      <thead style="background-color: gray;color: aliceblue;">
         <th>ID</th>
-        <th>ID Paciente</th>
+        <th>ID Atendido</th>
         <th>Serviço Indicado</th>
         <th>Orgao Responsável</th>
         <th>Competência Territorial</th>
