--- a/templates/listPacientes.html
+++ b/templates/listPacientes.html
@@ -7,7 +7,7 @@
 <div class="jumbotron p-3">
     <div class="well text-center">
 
- <h1> Lista de Pacientes</h1>
+ <h1> Lista de Atendidos</h1>
 
     </div>
 
@@ -15,11 +15,11 @@
 </div>
 <div class="container">
     <div>
-     <a class="nav-link"  href="/create">+ Novo Paciente</a>
+     <a class="nav-link"  href="/create">+ Novo Atendido</a>
     </div>
 
     <br>
-    <b>Buscar Pacientes:
+    <b>Buscar Atendido:
           <input id="busca" type="text"
                  placeholder="buscar...">
         </b>
