--- a/templates/atualizarFamiliar.html
+++ b/templates/atualizarFamiliar.html
@@ -25,7 +25,7 @@
 <form action='' method = "POST">
 <table class="table">
     <tr>
-        <td>ID Paciente</td>
+        <td>ID Atendido</td>
      <td><input type="text"name="id_paciente"id="id_paciente"value="{{familiares.id_paciente}}"class="form-control"></td>
     </tr>
     <tr>
