--- a/templates/createFamiliar.html
+++ b/templates/createFamiliar.html
@@ -25,7 +25,7 @@
 <table class="table">
 
     <tr>
-        <td>Paciente Relacionado</td>
+        <td>Atendido Relacionado</td>
         <td><input type="text" name="id_paciente" id="id_paciente" placeholder="" class="form-control">
 </td>
     </tr>
