--- a/templates/createPaciente.html
+++ b/templates/createPaciente.html
@@ -14,7 +14,7 @@
         <a href="/"> <i class="fa-solid fa-arrow-left"></i></a> </div>
     <div class="well text-center">
 
- <h1> Novo Paciente</h1>
+ <h1> Novo Atendido</h1>
 
     </div>
 
