--- a/templates/header.html
+++ b/templates/header.html
@@ -19,7 +19,7 @@
         <ul class="navbar-nav" style="color: rgb(255,255,255)">
 
             <li class="nav-item">
-            <a class="nav-link" style="color:white" href="/">Lista Pacientes</a>
+            <a class="nav-link" style="color:white" href="/">Lista Atendidos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" style="color:white" href="/listPia">Lista PIA</a>
