--- a/templates/listFamiliares.html
+++ b/templates/listFamiliares.html
@@ -27,7 +27,7 @@
  <table class="table">
      <thead style="background-color: gray;color: aliceblue;">
         <th>ID</th>
-        <th>ID Paciente</th>
+        <th>ID Atendido</th>
         <th>Nome</th>
         <th>Paretesco</th>
         <th>Celular</th>
