--- a/templates/atualizarPaciente.html
+++ b/templates/atualizarPaciente.html
@@ -26,7 +26,7 @@
 <table class="table">
     <tr>
         <td>Nome</td>
-        <td><input type="text" name="nome" id="nome" value="{{pacientes.nome}}" class="form-control">
+        <td>{{pacientes.nome}}
 </td>
     </tr>
     <tr>
