--- a/templates/atualizarPia.html
+++ b/templates/atualizarPia.html
@@ -15,7 +15,7 @@
         <div class="well text-center">
     <div class="well text-center">
 
- <h1> Atualização PIA </h1>
+ <h1> Atualização PIA: {{pias.id_paciente}}</h1>
 
     </div>
 
@@ -24,10 +24,7 @@
 <div class="container">
 <form action='' method = "POST">
 <table class="table">
-    <tr>
-        <td>ID Atendido</td>
-     <td><input type="text"name="id_paciente"id="id_paciente"value="{{pias.id_paciente}}"class="form-control"></td>
-    </tr>
+
     <tr>
         <td>Serviço Indicado</td>
 <td><input type="text"name="serviço_indicado"id="serviço_indicado"value="{{pias.serviço_indicado}}"class="form-control"></td>
