--- a/templates/createFamiliar.html
+++ b/templates/createFamiliar.html
@@ -26,8 +26,12 @@
 
     <tr>
         <td>Atendido Relacionado</td>
-        <td><input type="text" name="id_paciente" id="id_paciente" placeholder="" class="form-control">
-</td>
+        <td>
+<select name="id_paciente" id="id_paciente" class="form-control">
+  {% for p in pacientes %}
+    <option value="{{p.nome}">{{p.nome}}</option>
+  {% endfor %}
+</select></td>
     </tr>
     <tr>
         <td>Nome</td>
