commit 8- ajuste bug

--- a/templates/createFamiliar.html
+++ b/templates/createFamiliar.html
@@ -29,7 +29,7 @@
         <td>
 <select name="id_paciente" id="id_paciente" class="form-control">
   {% for p in pacientes %}
-    <option value="{{p.nome}">{{p.nome}}</option>
+    <option value="{{p.nome}}">{{p.nome}}</option>
   {% endfor %}
 </select></td>
     </tr>
