--- a/templates/home.html
+++ b/templates/home.html
@@ -1,87 +1,47 @@
 {% extends 'base.html' %}
 {% include 'header.html' %}
-
 {% block title %} Home {% endblock %}
 
+
+
 {% block body %}
+
 <div class="jumbotron p-3">
+
+
     <div class="well text-center">
 
- <h1> Lista PIA</h1>
-
+ <h1> Resumo Dados </h1>
     </div>
 
-
 </div>
+
 <div class="container">
-        <div>
-     <a class="nav-link"  href="/createPIA">+ Novo PIA</a>
 
-    </div>
- <br>
-    <b>Busque por:
-          <input id="busca" type="text"
-                 placeholder="Search here">
-        </b>
-    <br><br>
- <table class="table">
-     <thead style="background-color: gray;color: aliceblue;">
-        <th>ID</th>
-        <th>ID Atendido</th>
-        <th>Serviço Indicado</th>
-        <th>Orgao Responsável</th>
-        <th>Competência Territorial</th>
-        <th>Responsável das Informações</th>
-     <th>Ações</th>
+        <div class="box">
+            <h1>Atendidos por Raça</h1>
 
-
-    </thead>
-
-   <tbody id="tablePia">
-    {% for pia in pias %}
-    <tr
-    {% if loop.index %2==0 %}
-    style="background-color:RGB(205,205,205);color:black;"
-    {% else %}
-    style="background-color:RGB(217,217,243);color:black;"
-    {% endif %}
-    ><td>{{ loop.index }}</td>
-    <td>{{pia.id_paciente}}</td>
-    <td>{{pia.serviço_indicado}}</td>
-    <td>{{pia.orgao_responsavel}}</td>
-    <td>{{pia.competencia_territorial}}</td>
-    <td>{{pia.responsavel_informaçoes}}</td>
-
-
-    <td>
-        <span style="font-size: 24px;color:red;">
-          <a href="/pia/{{pia.id}}"> <i class="fa-regular fa-eye"></i></a></span> |
-        <span style="font-size: 24px;color:white;">
-       <a href="/{{pia.id}}/pia/edit"> <i class="fas fa-edit"></i></a> </span>
-        | <span style="font-size: 24px;color:red;">
-          <a href="/{{pia.id}}/pia/delete"> <i class="fas fa-trash-alt"></i></a></span>
-
-
-    </td>
-
-    {% endfor %}
-   </tbody>
- </table>
-
-
-     <script>
-            $(document).ready(function() {
-                $("#busca").on("keyup", function() {
-                    var value = $(this).val().toLowerCase();
-                    $("#tablePia tr").filter(function() {
-                        $(this).toggle($(this).text()
-                        .toLowerCase().indexOf(value) > -1)
-                    });
-                });
+            <script type="text/javascript">
+                var chart1;
+                $(document).ready(function(){
+                chart1 = new Highcharts.Chart({
+                chart: {renderTo: 'container1'},
+                series: [{data: 1,2,3,4}]
             });
-        </script>
+        });
+</script>
+            <p>Aqui você pode inserir um gráfico ou qualquer outro tipo de visualização dos dados de vendas.</p>
+        </div>
 
-</div>
+        <div class="box">
+            <h1>Atendidos por Sexo</h1>
+            <p>Aqui você pode mostrar um resumo dos seus clientes, como o número total de clientes, clientes ativos, etc.</p>
+        </div>
 
+        <div class="box">
+            <h1>Atendidos</h1>
+            <p>Aqui você pode exibir notificações importantes para o usuário.</p>
+        </div>
+    </div>
 
 {% endblock %}
