--- a/templates/listFamiliares.html
+++ b/templates/listFamiliares.html
@@ -73,7 +73,7 @@
             $(document).ready(function() {
                 $("#busca").on("keyup", function() {
                     var value = $(this).val().toLowerCase();
-                    $("#tablePia tr").filter(function() {
+                    $("#tableFamiliar tr").filter(function() {
                         $(this).toggle($(this).text()
                         .toLowerCase().indexOf(value) > -1)
                     });
